adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -12,5 +12,8 @@
     Teste teste Teste teste Teste teste Teste teste Teste teste    
     Teste teste Teste teste Teste teste, Teste teste Teste teste
     Teste teste Teste teste Teste teste Teste teste?</p>
+    <p>Teste teste Teste teste Teste teste Teste teste.
+    Teste teste Teste teste Teste teste, Teste teste Teste teste
+    Teste teste Teste teste Teste teste Teste teste?</p>
 </body>
 </html>
