adicionei uma cor na tag hr

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Olá, Mundo!</h1>
-    <hr>
+    <hr color="red">
     <p>Teste teste Teste teste Teste teste Teste teste.
     Teste teste Teste teste Teste teste Teste teste Teste teste    
     Teste teste Teste teste Teste teste, Teste teste Teste teste
